--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
 
-    /*implementation project(':library')*/
+    //implementation project(':library')
 }
